--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@ background-color:brown;
 text-size:200px;
 font-weight:800;
 margin:0;
-padding:20px 20px 20px 20px;
+padding:12px 12px 12px 12px;
 display:block;
 text-decoration:none;
 }
@@ -13,7 +13,7 @@ text-decoration:none;
 h1{
   text-align:center;
   font-style:arial;
-  color:gold;
+  color:coral;
   text-size:200px;
   font-weight:800;
   padding:12px 10px 12px 12px;
@@ -21,7 +21,7 @@ h1{
 }
 h2{
   font-style:times new roman;
-  color:black;
+  color:brown;
   text-align:justify;
 
 }
@@ -36,8 +36,9 @@ nav a{
 img{
   float:right
 }
-h2 h3{
-  border:5px medium orange;
+ h3{
+ color:brown;
+   text-align:justify;
 }
 .logo{
   height:80px;
